// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading spinner matches the snapshot 1`] = `
<div>
  <PageHeader>
    <h1>
      Operators
    </h1>
  </PageHeader>
  <main>
    <MessageAlertPage
      level="warning"
    >
      <div>
        Operators integration is under heavy development and currently in alpha state. If you find an issue please report it
         
        <a
          href="https://github.com/kubeapps/kubeapps/issues"
          target="_blank"
        >
          here.
        </a>
      </div>
    </MessageAlertPage>
    <LoadingWrapper
      loaded={false}
      type={0}
    >
      <OLMNotFound />
    </LoadingWrapper>
  </main>
</div>
`;

exports[`render the operator list with installed operators 1`] = `
<div>
  <PageHeader>
    <h1>
      Operators
    </h1>
  </PageHeader>
  <main>
    <MessageAlertPage
      level="warning"
    >
      <div>
        Operators integration is under heavy development and currently in alpha state. If you find an issue please report it
         
        <a
          href="https://github.com/kubeapps/kubeapps/issues"
          target="_blank"
        >
          here.
        </a>
      </div>
    </MessageAlertPage>
    <LoadingWrapper
      loaded={true}
      type={0}
    >
      <h3>
        Installed
      </h3>
      <CardGrid>
        <InfoCard
          icon="api/v1/namespaces/default/operator/foo/logo"
          info="v1.0.0"
          key="foo"
          link="/operators/ns/default/foo"
          tag1Content="security"
          tag2Content="kubeapps"
          title="foo"
        />
      </CardGrid>
      <h3>
        Available Operators
      </h3>
      <CardGrid />
    </LoadingWrapper>
  </main>
</div>
`;

exports[`render the operator list without installed operators 1`] = `
<div>
  <PageHeader>
    <h1>
      Operators
    </h1>
  </PageHeader>
  <main>
    <MessageAlertPage
      level="warning"
    >
      <div>
        Operators integration is under heavy development and currently in alpha state. If you find an issue please report it
         
        <a
          href="https://github.com/kubeapps/kubeapps/issues"
          target="_blank"
        >
          here.
        </a>
      </div>
    </MessageAlertPage>
    <LoadingWrapper
      loaded={true}
      type={0}
    >
      <h3>
        Available Operators
      </h3>
      <CardGrid>
        <InfoCard
          icon="api/v1/namespaces/default/operator/foo/logo"
          info="v1.0.0"
          key="foo"
          link="/operators/ns/default/foo"
          tag1Content="security"
          tag2Content="kubeapps"
          title="foo"
        />
      </CardGrid>
    </LoadingWrapper>
  </main>
</div>
`;
